Stöd för replikering av solr + sök-api

--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,29 @@
 
 # solr:s baskatalog för inställningsfiler
 solr.home=/var/ksamsok-solr
+
+## replikering
+## nedanstående kommer användas för att ersätta typ:
+## <!-- @SOLR_REPLICATION@ -->
+## vilket gör att start- och slutkommentar etc är viktiga
+
+# xml-snippet för replikeringsmaster
+solr.master.conf=replication master -->\n\
+  <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
+    <lst name="master">\n\
+      <str name="replicateAfter">commit</str>\n\
+      <str name="replicateAfter">startup</str>\n\
+      <!--<str name="confFiles">schema.xml,stopwords.txt</str>-->\n\
+    </lst>\n\
+  </requestHandler>\n\
+<!-- replication master
+
+# xml-snippet för replikeringsslav
+solr.slave.conf=replication slave -->\n\
+  <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
+    <lst name="slave">\n\
+      <str name="masterUrl">http://lx-ra-ksam1.raa.se:8080/solr/replication</str>\n\
+      <str name="pollInterval">00:15:00</str>\n\
+    </lst>\n\
+  </requestHandler>\n\
+<!-- replication slave
