återanvänder /var/lucene-index som lagringsplats

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 
 # solr:s baskatalog för inställningsfiler
-solr.home=/var/ksamsok-solr
+solr.home=/var/lucene-index
 
 ## replikering
 ## nedanstående kommer användas för att ersätta typ:
