--- a/build.xml
+++ b/build.xml
@@ -142,6 +142,7 @@
 
     <target name="clean" depends="init"
         description="Tar bort build-katalogen.">
+    	<mkdir dir="${project.build.dir}"/>
         <delete includeemptydirs="true" >
             <fileset dir="${project.build.dir}">
                 <patternset>
