--- a/build.xml
+++ b/build.xml
@@ -223,10 +223,11 @@
 
 	</target>
 
-	<target name="RAA-RPM" depends="replication-master,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö">
-	</target>
+	<!-- Här avgörs om man bygger en master eller slav -->
+	<!-- <target name="RAA-RPM" depends="replication-master,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö">
+	</target>  -->
 
-	<target name="RAA-RPM-SLAVE" depends="replication-slave,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö, replikeringsslav">
+	<target name="RAA-RPM" depends="replication-slave,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö, replikeringsslav">
 	</target>
 
 </project>
