Logga inte sökningar, men behåll uppdateringsmeddelanden tills vidare

--- a/solr/log4j.properties
+++ b/solr/log4j.properties
@@ -6,6 +6,28 @@ log4j.rootLogger=INFO, CONSOLE
 log4j.logger.org.apache.solr=INFO, CONSOLE
 log4j.additivity.org.apache.solr=false
 
+log4j.logger.org.apache.solr.util=WARN, CONSOLE
+log4j.additivity.org.apache.solr.util=false
+
+log4j.logger.org.apache.solr.handler=WARN, CONSOLE
+log4j.additivity.org.apache.solr.handler=false
+
+log4j.logger.org.apache.solr.search=WARN, CONSOLE
+log4j.additivity.org.apache.solr.search=false
+
+org.apache.solr.core.SolrResourceLoader=INFO, CONSOLE
+log4j.additivity.org.apache.solr.core.SolrResourceLoader=false
+
+org.apache.solr.core.Config=INFO, CONSOLE
+log4j.additivity.org.apache.solr.core.Config=false
+
+org.apache.solr.schema.IndexSchema=INFO, CONSOLE
+log4j.additivity.org.apache.solr.schema.IndexSchema=false
+# sökningar
+log4j.logger.org.apache.solr.core.SolrCore=WARN, CONSOLE
+log4j.additivity.org.apache.solr.core.SolrCore=false
+
+
 # Appender "CONSOLE": ConsoleAppender till aktuell System.out-ström
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=DEBUG
