--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<project name="solr" basedir="." default="RAA-RPM">
+<project name="solr" basedir="." default="RAA-UTV-RPM">
 
     <description>
         Ant-byggfil, ksamsok - solr.
@@ -176,7 +176,7 @@
 		<property name="solr.replication.rpm.suffix" value="slave" />
 	</target>
 
-	<target name="base-RAA-RPM" depends="clean,war">
+	<target name="base-RAA-UTV-RPM" depends="clean,war">
 		<fail unless="solr.replication.snippet" message="Ingen replikeringskonf"/>
 		<fail unless="solr.replication.rpm.suffix" message="Ingen suffix-egenskap satt"/>
 		<!-- skapa RPM-struktur -->
@@ -224,10 +224,10 @@
 	</target>
 
 	<!-- Här avgörs om man bygger en master eller slav -->
-	<target name="RAA-RPM" depends="replication-master,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö">
-	</target>
+	<!--<target name="RAA-RPM" depends="replication-master,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö">
+	</target>-->
 
-	<!-- <target name="RAA-RPM" depends="replication-slave,base-RAA-RPM" description="Skapa rpm för raä:s driftmiljö, replikeringsslav">
-	</target> -->
+	<target name="RAA-UTV-RPM" depends="replication-slave,base-RAA-UTV-RPM" description="Skapa rpm för raä:s driftmiljö, replikeringsslav">
+	</target>
 
 </project>
