*** empty log message ***

--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,7 @@ solr.master.conf=replication master -->\n\
 solr.slave.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
-      <str name="masterUrl">http://lx-ra-ksam1.raa.se:8080/solr/replication</str>\n\
+      <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
       <str name="pollInterval">00:15:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
