koverterad från ISO-8859-1 till UTF-8

--- a/build.properties
+++ b/build.properties
@@ -1,13 +1,13 @@
 
-# solr:s baskatalog för inställningsfiler
+# solr:s base catalogue for settings files 
 solr.home=/var/lucene-index
 
-## replikering
-## nedanstående kommer användas för att ersätta typ:
+## replication
+## following will be used for replacing placeholders of type:
 ## <!-- @SOLR_REPLICATION@ -->
-## vilket gör att start- och slutkommentar etc är viktiga
+## N.B. take care to use correct syntax for comments.
 
-# xml-snippet för replikeringsmaster
+# xml-snippet for replication master
 solr.master.conf=replication master -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="master">\n\
@@ -18,12 +18,12 @@ solr.master.conf=replication master -->\n\
   </requestHandler>\n\
 <!-- replication master
 
-# xml-snippet för replikeringsslav
+# xml-snippet for replication slave
 solr.slave.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
-      <str name="pollInterval">00:15:00</str>\n\
+      <str name="pollInterval">01:00:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
