Add test server

--- a/build.properties
+++ b/build.properties
@@ -18,11 +18,20 @@ solr.master.conf=replication master -->\n\
   </requestHandler>\n\
 <!-- replication master
 
-# xml-snippet for replication slave
-solr.slave.conf=replication slave -->\n\
+# xml-snippet for replication slave test
+solr.slave.test.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
+      <str name="pollInterval">01:00:00</str>\n\
+    </lst>\n\
+  </requestHandler>\n\
+<!-- replication slave
+
+solr.slave.conf=replication slave -->\n\
+  <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
+    <lst name="slave">\n\
+      <str name="masterUrl">http://lx-ra-ksam1.raa.se:8080/solr/replication</str>\n\
       <str name="pollInterval">01:00:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
