Pollintervall has been removed for replication slaves due to the fact that they are accessing the same index as the master

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ solr.home=/var/lucene-index
 ## replication
 ## following will be used for replacing placeholders of type:
 ## <!-- @SOLR_REPLICATION@ -->
+## PollIntervall för slavar har tagits bort eftersom de läser samma index som mastern
 ## N.B. take care to use correct syntax for comments.
 
 # xml-snippet for replication master
@@ -23,7 +24,6 @@ solr.slave.test.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
-      <str name="pollInterval">01:00:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
@@ -32,7 +32,6 @@ solr.slave.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksam1.raa.se:8080/solr/replication</str>\n\
-      <str name="pollInterval">01:00:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
