--- a/build.properties
+++ b/build.properties
@@ -23,6 +23,7 @@ solr.slave.test.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
+      <str name="pollInterval">00:00:60</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
@@ -31,6 +32,7 @@ solr.slave.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksam1.raa.se:8080/solr/replication</str>\n\
+      <str name="pollInterval">00:00:60</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
