--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,7 @@ solr.home=/var/lucene-index
 ## replication
 ## following will be used for replacing placeholders of type:
 ## <!-- @SOLR_REPLICATION@ -->
-## PollIntervall för slavar har tagits bort eftersom de är tänkt att de läser samma index som mastern
+## PollIntervall används för att säkerställa att slaven har koll på att index har uppdateras av mastern
 ## N.B. take care to use correct syntax for comments.
 
 # xml-snippet for replication master
