--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ solr.home=/var/lucene-index
 ## following will be used for replacing placeholders of type:
 ## <!-- @SOLR_REPLICATION@ -->
 ## PollIntervall används för att säkerställa att slaven har koll på att index har uppdateras av mastern
+## Blev problem med OutOfMemory på slave därför provar vi med att ta bort pollingen       <str name="pollInterval">00:00:60</str>\n\
 ## N.B. take care to use correct syntax for comments.
 
 # xml-snippet for replication master
@@ -23,7 +24,6 @@ solr.slave.test.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
-      <str name="pollInterval">00:00:60</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
@@ -32,7 +32,6 @@ solr.slave.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksam2.raa.se:8080/solr/replication</str>\n\
-      <str name="pollInterval">00:00:60</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
