--- a/build.properties
+++ b/build.properties
@@ -24,6 +24,7 @@ solr.slave.test.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksamtest1.raa.se:8080/solr/replication</str>\n\
+      <str name="pollInterval">06:00:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
@@ -32,6 +33,7 @@ solr.slave.conf=replication slave -->\n\
   <requestHandler name="/replication" class="solr.ReplicationHandler" >\n\
     <lst name="slave">\n\
       <str name="masterUrl">http://lx-ra-ksam2.raa.se:8080/solr/replication</str>\n\
+      <str name="pollInterval">00:20:00</str>\n\
     </lst>\n\
   </requestHandler>\n\
 <!-- replication slave
