--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ RUNNING_PID
 *.class
 *.war
 *.ear
+*.jar
 
-gradlew.bat
+.gradle/
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+.idea
+
 ksamsok-config/solrconfig.xml~
