--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ RUNNING_PID
 *.ear
 *.jar
 
-.gradle/
+.gradle
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
