--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
-bin/
-target/
-**/build/
-logs/
-repository/
-**/test-reports/
-*.lock
-*.komodoproject
-.DS_Store
-workspace/
-.history
-RUNNING_PID
+# Intellij-genererade filer
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+
+# Eclipse-genererade filer
 .classpath
+.project
 .settings/
-.target/
-.cache
+.metadata
 
-*.class
-*.war
-*.ear
-*.jar
-
-.gradle
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-.idea
-
-ksamsok-config/solrconfig.xml~
+# Arbetsmaterial
+/arbetsmaterial/
